fix: solve all spacing and font size issues

--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
     font-weight: bold;
 }
 
+@font-face {
+    font-family: Noteworthy;
+    src: url(./assets/Noteworthy.ttc);
+}
+
 h1 {
     font-style: normal;
     font-weight: 600;
@@ -24,7 +29,7 @@ h1 {
 h2 {
     font-style: normal;
     font-weight: 500;
-    font-size: 3.75vw;
+    font-size: 3.75rems;
     text-align: center;
     color: #000000;
     font-family: 'Montserrat';
@@ -34,7 +39,22 @@ p {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.8rems;
+}
+
+@media screen and (min-width: 700px) {
+    p {
+        font-size: 24px;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .split-graphic {
+        margin-bottom: 50px;
+    }
+    .split-graphic-inv {
+        margin-bottom: 50px;
+    }
 }
 
 #spacer {
@@ -129,7 +149,7 @@ p {
 .blackout-pane {
     background: #000000;
     color: #FFFFFF;
-    padding-top: 100px;
+    padding-top: 50px;
     padding-bottom: 100px;
     padding-left: 10%;
     padding-right: 10%;
